# OpenFNB58

./: .gitignore  README.md  fnb58.py
.github/workflows/: build.yml
app/: BaseTransport.h  BleTransport.cpp  BleTransport.h  CMakeLists.txt  DataRecord.h  DeviceBackend.cpp  DeviceBackend.h  UsbTransport.cpp  UsbTransport.h  XlsxWriter.cpp  XlsxWriter.h  ZipWriter.cpp  ZipWriter.h  build.sh  fnb58app.desktop  main.cpp
app/qml/: LiveChart.qml  Main.qml
